--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -1,5 +1,19 @@
 {
   "@@locale" : "pt",
-  "filters" : "filtros"
-
+  "filters" : "filtros",
+  "withDiscount": "com desconto",
+  "available": "disponíveis",
+  "hydro": "hidro",
+  "swimming_pool": "piscina",
+  "sauna": "sauna",
+  "ofuro": "ofurô",
+  "adultDecoration": "decoração erótica",
+  "themedDecoration": "decoração temática",
+  "adultChair": "cadeira erótica",
+  "danceFloor": "pista de dança",
+  "privateGarage": "garagem privativa",
+  "frigobar": "frigobar",
+  "internetWiFi" : "internet wi-fi",
+  "suiteForParties": "suite para festas",
+  "suiteWithAccessibility": "suite com acessibilidade"
 }
