Add translations for header

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -15,5 +15,8 @@
   "frigobar": "frigobar",
   "internetWiFi" : "internet wi-fi",
   "suiteForParties": "suite para festas",
-  "suiteWithAccessibility": "suite com acessibilidade"
+  "suiteWithAccessibility": "suite com acessibilidade",
+
+  "goNow": "ir agora",
+  "goLater": "ir outro dia"
 }
