--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -15,5 +15,8 @@
   "frigobar": "mini-bar",
   "internetWiFi" : "internet wi-fi",
   "suiteForParties": "suite for parties",
-  "suiteWithAccessibility": "suite with accessibility"
+  "suiteWithAccessibility": "suite with accessibility",
+
+  "goNow": "go now",
+  "goLater": "go later"
 }
