Add available suites translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -20,5 +20,6 @@
   "goNow": "go now",
   "goLater": "go later",
 
-  "reviews": "{count, plural, =1 {{count} review} other {{count} reviews}}"
+  "reviews": "{count, plural, =1 {{count} review} other {{count} reviews}}",
+  "remainingSuites": "only {count} left via app"
 }
