--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -20,5 +20,7 @@
   "goNow": "ir agora",
   "goLater": "ir outro dia",
 
-  "reviews": "{count, plural, =1 {{count} avaliação} other {{count} avaliações}}"
+  "reviews": "{count, plural, =1 {{count} avaliação} other {{count} avaliações}}",
+  "remainingSuites": "só mais {count} pelo app}"
+
 }
