Add see all translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -21,5 +21,7 @@
   "goLater": "go later",
 
   "reviews": "{count, plural, =1 {{count} review} other {{count} reviews}}",
-  "remainingSuites": "only {count} left via app"
+  "remainingSuites": "only {count} left via app",
+  "hours": "{count, plural, =1 {{count} hour} other {{count} hours}}",
+  "seeAll": "see\nall"
 }
